src/test/ui/consts/min_const_fn/min_const_fn_libstd_stability.stderr
error: `foo` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:16:25
   |
LL | const fn bar() -> u32 { foo() }
   |                         ^^^^^
   |
   = help: Const-stable functions can only call other const-stable functions

error: `foo2` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:24:26
   |
LL | const fn bar2() -> u32 { foo2() }
   |                          ^^^^^^
   |
   = help: Const-stable functions can only call other const-stable functions

error: const-stable function cannot use `#[feature(const_fn_floating_point_arithmetic)]`
  --> $DIR/min_const_fn_libstd_stability.rs:29:26
   |
LL | const fn bar3() -> u32 { (5f32 + 6f32) as u32 }
   |                          ^^^^^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL | #[rustc_const_unstable(feature = "...", issue = "...")]
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL | #[rustc_allow_const_fn_unstable(const_fn_floating_point_arithmetic)]
   |

error: `foo2_gated` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:39:32
   |
LL | const fn bar2_gated() -> u32 { foo2_gated() }
   |                                ^^^^^^^^^^^^
   |
   = help: Const-stable functions can only call other const-stable functions

error: aborting due to 4 previous errors

